syntax = "proto3";

package workload;

option go_package = "github.com/panjek26/k8s-workload-analyzer/proto";

service WorkloadAnalyzer {
  rpc AnalyzeWorkload (WorkloadRequest) returns (WorkloadAnalysis) {}
}

message WorkloadRequest {
  string namespace = 1;
  string deployment_name = 2;
  repeated MetricData metrics = 3;
}

message MetricData {
  string metric_name = 1;
  double value = 2;
  int64 timestamp = 3;
}

message WorkloadAnalysis {
  string analysis_result = 1;
  double confidence_score = 2;
  repeated Recommendation recommendations = 3;
}

message Recommendation {
  string action = 1;
  string reason = 2;
  double impact_score = 3;
}